--- a/Resources/administration/src/module/sw-mail-template/component/sw-mail-header-footer-list/sw-mail-header-footer-list.html.twig
+++ b/Resources/administration/src/module/sw-mail-template/component/sw-mail-header-footer-list/sw-mail-header-footer-list.html.twig
@@ -86,7 +86,7 @@
                                   variant="small">
                             {% block sw_mail_header_footer_list_delete_modal_confirm_delete_text %}
                                 <p class="sw-mail-header-footer-list__confirm-delete-text">
-                                    {{ $tc('sw-mail-header-footer.list.textDeleteConfirm', 0, { name: item.name }) }}
+                                    {{ $tc('sw-mail-header-footer.list.textDeleteConfirm', 0, { name: item.translated.name }) }}
                                 </p>
                             {% endblock %}
 
