--- a/Resources/administration/src/module/sw-media/component/sw-media-modal/sw-media-modal.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sw-media-modal/sw-media-modal.html.twig
@@ -92,7 +92,7 @@
                                                         :isList="compact"
                                                         @media-item-selection-remove="onMediaRemoveSelected"
                                                         @media-item-selection-add="onMediaAddSelected"
-                                                        @media-item-click="onMeidaItemSelect">
+                                                        @media-item-click="onMediaItemSelect">
                                                     </sw-media-media-item>
                                                 </sw-media-grid>
                                             {% endblock %}
