--- a/Resources/administration/src/module/sw-order/component/sw-order-address-modal/sw-order-address-modal.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-address-modal/sw-order-address-modal.html.twig
@@ -38,7 +38,7 @@
                                     {{ address | salutation }}<br>
                                     {{ address.street }} <br>
                                     {{ address.zipcode }} {{ address.city }}<br>
-                                    {{ address.country.name }}<br>
+                                    {{ placeholder(address.country, 'name') }}<br>
                                 </sw-button>
                             {% endblock %}
                         </div>
