--- a/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -87,7 +87,7 @@
 
                                     {% block sw_order_list_grid_columns_state %}
                                         <template slot="column-stateMachineState.name" slot-scope="{ item }">
-                                            <sw-label small>{{ item.stateMachineState.name }}</sw-label>
+                                            <sw-label small>{{ item.stateMachineState.translated.name }}</sw-label>
                                         </template>
                                     {% endblock %}
 
