--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-modal-variant-generation/sw-product-modal-variant-generation.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-modal-variant-generation/sw-product-modal-variant-generation.html.twig
@@ -1,6 +1,6 @@
 {% block sw_product_modal_variant_generation %}
     <sw-modal
-            title="Varianten generieren"
+            :title="$tc('sw-product.variations.configuratorModal.title')"
             @modal-close="$emit('modal-close')"
             class="sw-product-modal-variant-generation">
 
