--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-delivery/sw-product-variants-delivery-media/sw-product-variants-delivery-media.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-delivery/sw-product-variants-delivery-media/sw-product-variants-delivery-media.html.twig
@@ -29,7 +29,7 @@
 
                         {% block sw_product_variants_delivery_media_data_grid_column_name %}
                             <template slot="column-name" slot-scope="{ item, isInlineEdit, compact }">
-                                {{ item.internalOption ? item.internalOption.name : item.option.name }}
+                                {{ item.option.translated.name }}
                             </template>
                         {% endblock %}
 
