--- a/Resources/administration/src/module/sw-promotion/page/sw-promotion-list/sw-promotion-list.html.twig
+++ b/Resources/administration/src/module/sw-promotion/page/sw-promotion-list/sw-promotion-list.html.twig
@@ -116,7 +116,7 @@
                                                       variant="small">
                                                 {% block sw_promotion_list_delete_modal_confirm_delete_text %}
                                                     <p class="sw-promotion-list__confirm-delete-text">
-                                                        {{ $tc('sw-promotion.list.textDeleteConfirm', 0, { name: item.name }) }}
+                                                        {{ $tc('sw-promotion.list.textDeleteConfirm', 0, { name: item.translated.name }) }}
                                                     </p>
                                                 {% endblock %}
 
