--- a/Resources/administration/src/module/sw-property/component/sw-property-option-list/sw-property-option-list.html.twig
+++ b/Resources/administration/src/module/sw-property/component/sw-property-option-list/sw-property-option-list.html.twig
@@ -41,7 +41,7 @@
 
                         {% block sw_property_option_list_grid_column_name %}
                             <sw-grid-column dataIndex="name" editable truncate flex="minmax(150px, 1fr)" :label="$tc('sw-property.detail.labelOptionName')">
-                            {{ item.name }}
+                            {{ item.translated.name }}
                             <sw-field type="text" slot="inline-edit" v-model="item.name" />
                         </sw-grid-column>
                         {% endblock %}
@@ -55,7 +55,7 @@
 
                         {% block sw_property_option_list_grid_column_position %}
                             <sw-grid-column dataIndex="position" editable flex="100px" :label="$tc('sw-property.detail.labelOptionPosition')">
-                                {{ item.position }}
+                                {{ item.translated.position }}
                                 <sw-field type="number" slot="inline-edit" v-model="item.position" :step="1" pattern="[0-9]" />
                             </sw-grid-column>
                         {% endblock %}
