--- a/Resources/administration/src/module/sw-settings-country/component/sw-country-state-detail/sw-country-state-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-country/component/sw-country-state-detail/sw-country-state-detail.html.twig
@@ -9,6 +9,7 @@
                     <sw-field
                             type="text"
                             :label="$tc('sw-country-state-detail.labelName')"
+                            :placeholder="placeholder(countryState, 'name')"
                             v-model="countryState.name">
                     </sw-field>
                 {% endblock %}
