--- a/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-list/sw-settings-language-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-list/sw-settings-language-list.html.twig
@@ -203,7 +203,7 @@
                     <sw-sidebar :propagateWidth="true">
                         {% block sw_settings_language_list_grid_sidebar_filter %}
                         <sw-sidebar-item icon="default-action-filter"
-                                         :title="'Filter'">
+                                         :title="$tc('sw-settings-language.list.titleSidebarFilter')">
                             <sw-collapse expandOnLoading>
                                 <div slot="header" class="sw-settings-language-list__collapse-header">
                                     <h4 class="sw-settings-language-list__collapse-title">
