--- a/Resources/administration/src/module/sw-settings-payment/component/sw-plugin-box/sw-plugin-box.html.twig
+++ b/Resources/administration/src/module/sw-settings-payment/component/sw-plugin-box/sw-plugin-box.html.twig
@@ -14,7 +14,7 @@
                         {% block sw_plugin_box_container_plugin_data_description %}
                             <div class="sw-plugin-box__description">
                                 {% block sw_plugin_box_container_plugin_data_description_label %}
-                                    <p class="sw-plugin-box__label">{{ plugin.label }}</p>
+                                    <p class="sw-plugin-box__label">{{ plugin.translation.label }}</p>
                                 {% endblock %}
                                 {% block sw_plugin_box_container_plugin_data_description_author %}
                                     <p class="sw-plugin-box__author">{{ plugin.author }}</p>
