--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.html.twig
@@ -51,7 +51,7 @@
                                                 <sw-button class="sw-settings-snippet-set-list__edit-set-action"
                                                            size="small"
                                                            variant="primary"
-                                                           :disabled="!snippetsEditiable"
+                                                           :disabled="!snippetsEditable"
                                                            @click="onEditSnippetSets">
                                                     {{ $tc('sw-settings-snippet.setList.buttonEditSet') }}
                                                 </sw-button>
