--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -99,7 +99,7 @@
                     {% block sw_manufacturer_detail_base_info_field_description %}
                         <sw-text-editor
                             :label="$tc('sw-manufacturer.detail.labelDescription')"
-                            :placeholder="placeholder(manufacturer, 'name', $tc('sw-manufacturer.detail.placeholderDescription'))"
+                            :placeholder="placeholder(manufacturer, 'description', $tc('sw-manufacturer.detail.placeholderDescription'))"
                             name="description"
                             v-model="manufacturer.description">
                         </sw-text-editor>
