--- a/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.html.twig
+++ b/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.html.twig
@@ -61,7 +61,7 @@
                                                         :label="$tc('sw-plugin.list.columnPluginName')"
                                                         dataIndex="label">
                                             {% block sw_plugin_list_grid_columns_label_label %}
-                                                <sw-plugin-table-entry :icon="item.icon" :title="item.label"
+                                                <sw-plugin-table-entry :icon="item.icon" :title="item.translated.label"
                                                                        :subtitle="item.author">
                                                 </sw-plugin-table-entry>
                                             {% endblock %}
