--- a/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
@@ -360,7 +360,7 @@
                             {% block sw_sales_channel_detail_options_delete_modal_confirmtext %}
                                 <p class="sw-sales-channel-detail-base__delete-modal-confirm-text">{{ $tc('sw-sales-channel.detail.textConfirmDelete') }}</p>
                                 <p class="sw-sales-channel-detail-base__delete-modal-name">
-                                    <strong>{{ salesChannel.name }}</strong>
+                                    <strong>{{ placeholder(salesChannel, 'name') }}</strong>
                                 </p>
                                 <p>{{ $tc('sw-sales-channel.detail.textDeleteInfo') }}</p>
                             {% endblock %}
