--- a/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
@@ -3,8 +3,7 @@
 
         {% block sw_settings_country_detail_header %}
             <template slot="smart-bar-header">
-                <h2 v-if="country.name">{{ country.name }}</h2>
-                <h2 v-else>{{ $tc('sw-settings-country.detail.textHeadline') }}</h2>
+                <h2>{{ placeholder(country, 'name', $tc('sw-settings-country.detail.textHeadline')) }}</h2>
             </template>
         {% endblock %}
 
