--- a/Resources/administration/src/module/sw-settings-currency/page/sw-settings-currency-detail/sw-settings-currency-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-currency/page/sw-settings-currency-detail/sw-settings-currency-detail.html.twig
@@ -3,8 +3,7 @@
 
         {% block sw_settings_currency_detail_header %}
             <template slot="smart-bar-header">
-                <h2 v-if="currency.name">{{ currency.name }}</h2>
-                <h2 v-else>{{ $tc('sw-settings-currency.detail.textHeadline') }}</h2>
+                <h2>{{ placeholder(currency, 'name', $tc('sw-settings-currency.detail.textHeadline')) }}</h2>
             </template>
         {% endblock %}
 
