--- a/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.html.twig
@@ -136,7 +136,7 @@
                                                           variant="small">
                                                     {% block sw_settings_payment_list_delete_modal_confirm_text %}
                                                         <p>
-                                                            {{ $tc('sw-settings-payment.list.textDeleteConfirm', 0, { name: item.name }) }}
+                                                            {{ $tc('sw-settings-payment.list.textDeleteConfirm', 0, { name: item.translated.name }) }}
                                                         </p>
                                                     {% endblock %}
 
