--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -3,8 +3,7 @@
 
         {% block sw_settings_shipping_detail_header %}
             <template slot="smart-bar-header">
-                <h2 v-if="placeholder(shippingMethod, 'name', false)">{{ placeholder(shippingMethod, 'name', shippingMethod.name) }}</h2>
-                <h2 v-else>{{ $tc('sw-settings-shipping.detail.textHeadline') }}</h2>
+                <h2>{{ placeholder(shippingMethod, 'name', $tc('sw-settings-shipping.detail.textHeadline')) }}</h2>
             </template>
         {% endblock %}
 
